examples/test/testpolicy12381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12381
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key27: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value0
          key5: value13
      podSelector:
        matchLabels:
          key5: value14
          key22: value29
